--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: warmtips
 subtitle: ''
-description: ''
+description: 'warmtips-blog'
 keywords:
-author: John Doe
-language: en
-timezone: ''
+author: warmtips
+language: zh-CN
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
