--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: cactus
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: 'git'
+  repo: https://github.com/warmtips/warmtips-blog
+  branch: gh-pages
